--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -4996,8 +4996,11 @@ button.bg-light:hover,
 button.bg-light:focus {
   background-color: #dae0e5 !important; }
 
+/* [이승준] 상단 내비바 색상 수정 */
 .bg-dark {
-  background-color: #343a40 !important; }
+	background-color: #000000 !important;
+	opacity:0.8;
+}
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
@@ -7298,29 +7301,38 @@ h1, h2, h3, h4, h5,
 .text-primary {
   color: #f85959 !important; }
 
+/* [이승준] 상단 내비바, 위치 수정 */
 .ftco-navbar-light {
-  background: transparent !important;
-  position: absolute;
-  top: 20px;
-  left: 0;
-  right: 0;
-  z-index: 3; }
-  @media (max-width: 991.98px) {
-    .ftco-navbar-light {
-      background: #000000 !important;
-      position: relative;
-      top: 0; } }
+	background:rgba(248, 89, 89, 0.1);
+	position: absolute;
+	/*top: 20px;*/
+	left: 0;
+	right: 0;
+	z-index: 3;
+}
+@media (max-width: 991.98px) {
+	.ftco-navbar-light {
+		background: #000000 !important;
+		position: relative;
+		top: 0;
+	}
+}
   .ftco-navbar-light .navbar-brand {
     color: #fff; }
-  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 14px;
-    padding-top: .9rem;
-    padding-bottom: .9rem;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: #fff;
-    font-weight: 400;
-    opacity: 1 !important; }
+
+/* [이승준] 내비바 버튼들 간격 추가 */
+.ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+	margin: 10px;	/* 간격 추가 */
+	font-size: 14px;
+	padding-top: .9rem;
+	padding-bottom: .9rem;
+	padding-left: 20px;
+	padding-right: 20px;
+	color: #fff;
+	font-weight: 400;
+	opacity: 1 !important;
+}
+
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
       color: #fff; }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
@@ -7363,13 +7375,69 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a span {
       display: inline-block;
       color: #fff; }
-    .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #f85959;
-      border: 1px solid #f85959; }
+
+/* 추가------------------------------------------------------------- */
+/* [이승준] 내비바 액티브 버튼 커서 온, 버튼 색상 변경 */
+.ftco-navbar-light .navbar-nav > .nav-item.active > a:hover {
+	/* 기존 : background: #f85959; */
+	background-color:rgba(248, 89, 89, 0.9);	/* 뒤 배경 색 */
+}
+/* 추가------------------------------------------------------------- */
+
+/* [이승준] 내비바 버튼 커서 온, 버튼 색상 변경 */
+.ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
+	/* 기존 : background: #f85959; */
+	background-color:rgba(248, 89, 89, 0.5);	/* 뒤 배경 색 */
+}
+
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
     border-color: #f85959; }
-  .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: rgba(255, 255, 255, 0.5); }
+
+/* [이승준] *내비바 액티브 버튼 모양, 글씨 및 모양 변경 */
+.ftco-navbar-light .navbar-nav > .nav-item.active > a {
+	/* 기존 : color: rgba(255, 255, 255, 0.5); */
+	color: #000000!important;
+	font-weight: 600;
+	background: #f85959;
+	border: none !important;
+	padding-top: 0.5rem !important;
+	padding-bottom: .5rem !important;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 6px !important;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	border-radius: 30px;
+}
+/* 추가------------------------------------------------------------- */
+/* [이승준] 상단 내비바 버튼 액티브 */
+.ftco-navbar-light.scrolled .nav-item.member > a {
+	/* 기존 : color: #f85959 !important; */
+	color: #0080ff!important;
+	opacity:0.8;
+}
+
+/* [이승준] +내비바 멤버 버튼 모양, 글씨 및 모양 변경 */
+.ftco-navbar-light .navbar-nav > .nav-item.member > a {
+	/* 기존 : color: rgba(255, 255, 255, 0.5); */
+	margin: 3px;
+	color: #000000!important;
+	font-weight: 600;
+	background: #0080ff;
+	border: none !important;
+	padding-top: 0.5rem !important;
+	padding-bottom: .5rem !important;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 6px !important;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	border-radius: 30px;
+	opacity:0.8;
+}
+/* 추가------------------------------------------------------------- */
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -7387,21 +7455,29 @@ h1, h2, h3, h4, h5,
     background: #fff !important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
-    .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #f85959 !important; }
-    .ftco-navbar-light.scrolled .nav-item.cta > a {
-      color: #fff !important;
-      background: #f85959;
-      border: none !important;
-      padding-top: 0.5rem !important;
-      padding-bottom: .5rem !important;
-      padding-left: 20px;
-      padding-right: 20px;
-      margin-top: 6px !important;
-      -webkit-border-radius: 30px;
-      -moz-border-radius: 30px;
-      -ms-border-radius: 30px;
-      border-radius: 30px; }
+
+/* [이승준] 상단 내비바 버튼 액티브 */
+.ftco-navbar-light.scrolled .nav-item.active > a {
+	/* 기존 : color: #f85959 !important; */
+	color: #f85959 !important;
+}
+
+/* [이승준] 상단 내비바 버튼 cta */
+.ftco-navbar-light.scrolled .nav-item.cta > a {
+	color: #fff !important;
+	background: #f85959;
+	border: none !important;
+	padding-top: 0.5rem !important;
+	padding-bottom: .5rem !important;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 6px !important;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	border-radius: 30px;
+}
+
       .ftco-navbar-light.scrolled .nav-item.cta > a span {
         display: inline-block;
         color: #fff !important; }
