--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -1365,6 +1365,7 @@ pre {
 /* [이승준] 보드용 테이블 th, hf 추가 */
 .table-board th {
 	background-color: rgb(248, 89, 89, 0.5);
+	text-align:center;
 	padding: 0.75rem;
 	vertical-align: top;
 	border-top: 1px solid #dee2e6;
