[이승준] QnaService & QnaMapper : 게시글 삭제 시 댓글이 있는 경우, 댓글도 함께 삭제되게 트랜잭션 처리 수정 HostQnaMapper : Host QnA를 추가하는 쿼리 insertHostQna 추가, HostQnaService : addHostQna() 메서드 추가 HostQnaController.class : addHostQna() Get, Post 추가, addHostQna.jsp : 사업자가 QnA를 입력하는 폼 추가, modifyQna.jsp : css 적용, qnaOne.jsp : 댓글 추가 폼 수정

--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -1358,6 +1358,8 @@ pre {
 	margin-bottom: 20px;
 	background-color: transparent;
 }
+
+/* 추가------------------------------------------------------------- */
 /* [이승준] 보드용 테이블 추가 */
 .table-board {
 	background-color: rgb(128, 128, 128, 0.05);
@@ -1377,6 +1379,8 @@ pre {
 	border-top: 1px solid #dee2e6;
 }
 
+
+/* 추가------------------------------------------------------------- */
   .table th,
   .table td {
     padding: 0.75rem;
