--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -482,6 +482,14 @@ pre {
 .hc { position:absolute; width:80%; left:0; right:0; margin-left:100px; margin-right:100px; } /* 가로 중앙 정렬 */ 
 .vc { height:40px; top: 0; bottom:0; margin-top:auto; margin-bottom:auto; } /* 세로 중앙 정렬 */
 
+.overLapContainer > div {
+	top: 0;
+	position: absolute;
+}
+
+.overLapContainer.formBackgorund > div {
+	background-color: rgba(255, 255, 255, 0.3);
+}
 
 
 .container-fluid {
