--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -8894,25 +8894,32 @@ textarea.form-control {
   display: block; }
 
 .block-27 ul {
-  padding: 0;
-  margin: 0; }
-  .block-27 ul li {
-    display: inline-block;
-    margin-bottom: 4px;
-    font-weight: 400; }
-    .block-27 ul li a, .block-27 ul li span {
-      color: #f85959;
-      text-align: center;
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      border-radius: 50%;
-      border: 1px solid #fdd3d3; }
-    .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #fdd3d3;
-      color: #f85959;
-      border: 1px solid transparent; }
+	padding: 0;
+	margin: 0;
+}
+
+.block-27 ul li {
+	display: inline-block;
+	margin-bottom: 4px;
+	font-weight: 400;
+}
+
+.block-27 ul li a, .block-27 ul li span {
+	color: #f85959;
+	text-align: center;
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	border: 1px solid #fdd3d3;
+}
+
+.block-27 ul li.active a, .block-27 ul li.active span {
+	background: #fdd3d3;
+	color: #f85959;
+	border: 1px solid transparent;
+}
 
 .block-8 .accordion-item .heading {
   font-size: 16px;
