--- a/Sinnanda/src/main/webapp/css/style.css
+++ b/Sinnanda/src/main/webapp/css/style.css
@@ -67,6 +67,33 @@ body {
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
+/* [이승준] footer */
+
+/* Footer */
+.footer {
+	display: block; 
+	background: #222831;
+	color: #ffffff;
+	padding: 50px 2.45rem;
+	padding-left: 100px;
+	transition: all 0.25s ease;
+	-moz-transition: all 0.25s ease;
+	-webkit-transition: all 0.25s ease;
+	-ms-transition: all 0.25s ease;
+	font-size: calc(0.875rem - 0.05rem);
+	font-family: "Nunito", sans-serif;
+	font-weight: 400;
+	border-top: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+.footer a {
+	color: #c0c0c0;
+	font-size: inherit;
+}
+.footer a:hover {
+	color: #e5e5e5;
+}
+
 hr {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
